# incremental_vi

./: .gitignore  CMakeLists.txt  Dockerfile.experiments  README.md  coi_table.py  pyproject.toml  reproduce_eidar.py  run_all.sh  run_benchmarks.py  run_experiments.py  run_prism_mdp.py  run_undershoot_prism.py  smg_run.py  visualize_cone.py
.github/workflows/: before-all-linux.sh  before-all-macos.sh  ci-latest.yml  ci-stable.yml  create_wheel.yml  release_docker.yml  tag.yml  test_wheelpypi.yml
incremental_vi/: __init__.py  bvi.py  coi.py  model_utils.py  shoot.py
models/test/: cone_demo.prism  fig1_paper.prism  test_mdp.prism
paynt/: cli.py
paynt/dt/: _utils.py  api.py  decision_tree.py  synthesizer.py  task.py
paynt/dt/dtnest/: __init__.py  _utils.py  api.py  synthesizer.py  task.py
paynt/parser/: jani.py
paynt/quotient/: pomdp.py  quotient.py
paynt/synthesizer/: all_in_one.py  policy_tree.py  statistic.py  synthesizer.py
paynt/utils/: timer.py  version_check.py
payntbind/: CMakeLists.txt
payntbind/lib/payntbind/info/: __init__.py
payntbind/src/synthesis/counterexamples/: Counterexample.cpp  Counterexample.h  CounterexampleMdp.cpp  CounterexampleMdp.h
payntbind/src/synthesis/pomdp_family/: ObservationEvaluator.cpp
payntbind/src/synthesis/smg/modelchecker/: SparseSmgRpatlModelChecker.cpp
